# anime-d-forum-service

./: .gitignore  .sql  Cargo.toml  main.rs  postman_collection.json
api-python-flask/: .gitignore
