[package]
name = "anime-d-forum-service"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mysql = "24.0"
bcrypt = "0.10"
dotenv = "0.15"
uuid = { version = "1.0", features = ["v4"] }

[[bin]]
name = "anime-d-forum-service"
path = "main.rs"
